# Portfolio

./: LICENSE  README.md
ConvNet-main/: README.md
ConvNet-main/examples/: CMakeLists.txt  cifar10.hpp  cifar10_demo.cpp  cifar10_test.cpp  mnist.hpp  mnist_demo.cpp  mnist_drawing.cpp  mnist_test.cpp
ConvNet-main/examples/models/: adam_lenet5.json  adamw_lenet5.json  sgd_lenet5.json
ConvNet-main/include/: activations.h  conv.h  dense.h  im2col.h  losses.h  network.h  network.hpp  optimizer.h  pooling.h  save_load_model.h  utils.h  weight_init.h
ConvNet-main/src/: activations.cpp  conv.cpp  dense.cpp  im2col.cpp  losses.cpp  network.cpp  optimizer.cpp  pooling.cpp  save_load_model.cpp  utils.cpp  weight_init.cpp
ConvNet-main/tests/: CMakeLists.txt  activations_test.cpp  conv_test.cpp  dense_test.cpp  im2col_test.cpp  losses_test.cpp  network_test.cpp  optimizer_test.cpp  pooling_test.cpp  utils_for_test.cpp  utils_for_test.h  utils_test.cpp
Cryptocurrency-main/: README.md
Cryptocurrency-main/crypto/: address.py  block.py  blockchain.py  blockheader.py  json.py  logging.py  map.py  merkle.py  miner.py  multimap.py  node.py  params.py  script.py  sha256.py  signature.py  timestamp.py  tx.py  wallet.py
Cryptocurrency-main/demo/: demo.py
Cryptocurrency-main/ecc/: der.py  ec.py  ecdsa.py  ntheory.py  params.py  random.py
Cryptocurrency-main/examples/: example1.py  example2.py  example3.py
Cryptocurrency-main/gui/: diagram.py  qt.py
Cryptocurrency-main/tests/: test_crypto.py  test_ecc.py
DigitalCashDemo/: README.md
DigitalCashDemo/app/: app.py
DigitalCashDemo/app/static/css/: style.css
DigitalCashDemo/app/static/javascript/: cheat.js  deduct.js  deposit.js  index.js  lower-tables.js  overview.js  register.js  send.js  upper-tables.js
DigitalCashDemo/app/templates/: about.html  accounts.html  cheat.html  deduct.html  demo.html  deposit.html  index.html  overview.html  register.html  send.html  used.html  wallets.html
DigitalCashDemo/cash/: bank.py  coin.py  database.py  error.py  init.py  ntheory.py  spender.py  status.py  timestamp.py
IBC_java-main/: README.md
IBC_java-main/demo/: Demo.java  run.sh
IBC_java-main/pdf/: compile.sh  theory.aux  theory.dvi  theory.tex
IBC_java-main/src/: EC.java  Field.java  Fq.java  Fq2.java  IBC.java  Pairing.java  Point.java
IBC_java-main/tests/: Test.java  TestEC.java  TestFq.java  TestFq2.java  TestIBC.java  TestPairing.java  test.sh
Quantum_Computer-main/: README.md  octave-workspace  setup.py
Quantum_Computer-main/examples/: bell_basis.py  deutsch_algorithm.py  quantum_fourier_transform.py  quantum_teleportation.py  superdense_coding.py
Quantum_Computer-main/quantum/: operator.py  qubit.py
Quantum_Computer-main/tests/: test_algorithm.py  test_operator.py  test_qubit.py  test_utils.py
Renderer-main/: README.md
Renderer-main/examples/: CMakeLists.txt  gear.cpp  light.cpp  plane.cpp  polygon.cpp  polygon.h  shooter.cpp  sierpinski.cpp  sun_earth.cpp  texture_loader.cpp  texture_loader.h  triangle.cpp  utils.cpp  utils.h  window.cpp  x11.cpp  x11.h
Renderer-main/include/: buffer.h  camera.h  clip.h  color.h  context.h  light.h  material.h  matrix4.h  mesh.h  pipeline.h  shading.h  strip.h  texture.h  transform.h  type.h  utils.h  vector4.h  vertex.h  zbuffer.h
Renderer-main/src/: buffer.cpp  camera.cpp  clip.cpp  color.cpp  light.cpp  material.cpp  matrix4.cpp  mesh.cpp  pipeline.cpp  shading.cpp  strip.cpp  texture.cpp  transform.cpp  vector4.cpp  vertex.cpp  zbuffer.cpp
Renderer-main/tests/: CMakeLists.txt  test_matrix4.cpp  test_vector4.cpp  utils_for_test.h
Simple-2D-Physics-Demo-main/: README.md
Simple-2D-Physics-Demo-main/collision/: epa.py  gjk.py  struct.py  utils.py
Simple-2D-Physics-Demo-main/convex_hull/: convex_hull.py
Simple-2D-Physics-Demo-main/demos/: demo1.py  demo2.py  mygame.py
Simple-2D-Physics-Demo-main/game2D/: game.py
Simple-2D-Physics-Demo-main/math2D/: matrix3.py  vector2.py
Simple-2D-Physics-Demo-main/physics/: aabb.py  convex.py  force.py  objects.py  params.py  rigid.py  world.py
